# gastric-cancer-risk-calculator-version1

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  REPRODUCIBILITY.md  SECURITY.md  VALIDATION_REPORT.md  __init__.py  app.py  environment.yml  pyproject.toml  requirements.txt  risk_calculator.py  test_integration_old.py
.github/workflows/: ci.yml
.hypothesis/constants/: 4332965de6b4cc69  68ee7e199f43c95d  706dabc3ba417516  781e507036465765  7b2d2367fe60f703  989629cae0cee1f0  b1fbeebb9419bd02  cf03ba3c3f60f225  e9f7dbf59fe41c4d  f76b83cce7da8de6
data/: README.md
models/: variable_mapper_tcga.py
tests/: conftest.py  test_bootstrap.py  test_cox_model.py  test_logging_config.py  test_property_based.py  test_risk_calculator_integration.py  test_risk_model.py  test_visualization.py
utils/: __init__.py  bootstrap.py  logging_config.py  visualization.py
